--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
-version: '3'
 services:
+  app:
+    build: .
+    container_name: go-app
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./var/log:/app/var/log
+    depends_on:
+      - loki
+    networks:
+      - monitoring
+      
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -10,15 +21,58 @@ services:
       - ./prometheus-data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
+    networks:
+      - monitoring
 
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node-exporter
     ports:
       - "9100:9100"
+    networks:
+      - monitoring
+
+  loki:
+    image: grafana/loki:3.4.1
+    container_name: loki
+    ports:
+      - "3100:3100"
+    command: "-config.file=/etc/loki/config.yaml"
+    volumes:
+      - ./loki-config.yaml:/etc/loki/config.yaml
+      - loki-data:/tmp
+    networks:
+      - monitoring
+
+  promtail:
+    image: grafana/promtail:3.4.1
+    container_name: promtail
+    ports:
+      - "9080:9080"
+    depends_on:
+      - loki
+    volumes:
+      - ./promtail-config.yaml:/etc/prometheus/promtail-config.yaml
+      - ./var/log:/var/log
+    command: "-config.file=/etc/prometheus/promtail-config.yaml"
+    networks:
+      - monitoring
 
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
       - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - loki
+    networks:
+      - monitoring
+
+volumes:
+  loki-data:
+
+networks:
+  monitoring:
+    driver: bridge
