--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,12 +1,12 @@
 global:
-  scrape_interval: 15s  # Интервал сбора метрик
+  scrape_interval: 15s  
 
 scrape_configs:
-  - job_name: 'prometheus'  # Мониторинг самого Prometheus
+  - job_name: 'prometheus' 
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'node-exporter'  # Мониторинг сервера через Node Exporter
+  - job_name: 'node-exporter' 
     static_configs:
       - targets: ['10.0.2.15:9100']  # host.docker.internal:9100
   
